Add download url copy action

--- a/nuxeo-dynamic-asset-transformation-webui/src/main/resources/web/nuxeo.war/ui/i18n/messages.json
+++ b/nuxeo-dynamic-asset-transformation-webui/src/main/resources/web/nuxeo.war/ui/i18n/messages.json
@@ -10,5 +10,7 @@
   "label.action.transform.download": "Download",
   "label.action.transform.download.url": "Download URL",
   "label.action.transform.activate.cdn": "Activate CDN",
-  "label.action.transform.cdn.link":"CDN URL"
+  "label.action.transform.cdn.link":"CDN URL",
+  "label.action.transform.copy.url": "Copy URL",
+  "label.action.transform.copy.cdn.url": "Copy CDN URL"
 }
