Add more image conversion parameters

--- a/nuxeo-dynamic-asset-transformation-webui/src/main/resources/web/nuxeo.war/ui/i18n/messages.json
+++ b/nuxeo-dynamic-asset-transformation-webui/src/main/resources/web/nuxeo.war/ui/i18n/messages.json
@@ -7,6 +7,10 @@
   "label.action.transform.top":"Top offset",
   "label.action.transform.left":"Left Offset",
   "label.action.transform.watermark":"Watermark Text",
+  "label.action.transform.background.color": "Background Color",
+  "label.action.transform.compression.level": "Compression Level",
+  "label.action.transform.quality": "Quality",
+  "label.action.transform.colorspace": "Color Space",
   "label.dialog.button.close":"Close",
   "label.action.transform.download": "Download",
   "label.action.transform.download.url": "Download URL",
