Improve watermark selection UI

--- a/nuxeo-dynamic-asset-transformation-webui/src/main/resources/web/nuxeo.war/ui/i18n/messages.json
+++ b/nuxeo-dynamic-asset-transformation-webui/src/main/resources/web/nuxeo.war/ui/i18n/messages.json
@@ -6,7 +6,23 @@
   "label.action.transform.ratio":"Aspect Ratio",
   "label.action.transform.top":"Top offset",
   "label.action.transform.left":"Left Offset",
-  "label.action.transform.watermark":"Watermark Text",
+  "label.action.transform.watermark":"Watermark",
+  "label.action.transform.watermark.text":"Watermark Text",
+  "label.action.transform.watermark.asset": "Watermark Image",
+  "label.action.transform.watermark.gravity": "Watermark Position",
+  "label.watermark.none":"None",
+  "label.watermark.text":"Text",
+  "label.watermark.image":"Image",
+  "label.watermark.gravity.tile":"Tile",
+  "label.watermark.gravity.center":"Center",
+  "label.watermark.gravity.east":"Right",
+  "label.watermark.gravity.northEast":"Top Right Corner",
+  "label.watermark.gravity.north":"Top Center",
+  "label.watermark.gravity.northWest":"Top Left Corner",
+  "label.watermark.gravity.southEast":"Bottom Right Corner",
+  "label.watermark.gravity.south":"Bottom Center",
+  "label.watermark.gravity.southWest":"Bottom Left Corner",
+  "label.watermark.gravity.west":"Left",
   "label.action.transform.background.color": "Background Color",
   "label.action.transform.compression.level": "Compression Level",
   "label.action.transform.quality": "Quality",
